# mail2rss

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.MD  README.md  REQUIREMENTS.MD  config.example.toml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml
deploy/: pfsense-egress.md
src/mail2rss/: __init__.py  config.py  daemon.py  db.py  feeds.py  filters.py  health.py  http.py  jmap.py  logging.py  main.py  models.py  parser.py  sanitize.py
tests/: __init__.py  test_db.py  test_feeds_http.py  test_filters.py  test_fixture_privacy.py  test_jmap.py  test_parser_sanitize.py
tests/fixtures/: README.md  full_post.json
