[project]
name = "mail2rss"
version = "0.1.0"
description = "Fastmail JMAP to Atom bridge for newsletter email"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "bleach>=6.2.0",
  "feedgen>=1.0.0",
  "httpx[http2]>=0.28.0",
  "pydantic>=2.10.0",
  "structlog>=24.4.0",
]

[project.scripts]
mail2rss = "mail2rss.main:main"

[dependency-groups]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mail2rss"]

[[tool.mypy.overrides]]
module = ["bleach", "feedgen.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
